# cuMat

./: CMakeLists.txt  format_all.py
benchmarks/: Json.cpp  Json.h  json_st.cpp  json_st.h
benchmarks/batched_reduction/: main.cpp  reductions.cu  reductions.h
benchmarks/conjugate_gradient/: Implementation_Eigen.cpp  Implementation_cuMat.cu  benchmark.h  main.cpp
benchmarks/csrmv/: Implementation_Eigen.cpp  Implementation_cuBlas.cu  Implementation_cuMat_CSR.cu  Implementation_cuMat_ELLPACK.cu  benchmark.h  main.cpp
benchmarks/dotproduct/: Implementation_CUB.cu  Implementation_Eigen.cpp  Implementation_Thrust.cu  Implementation_cuBlas.cu  Implementation_cuMat.cu  benchmark.h  main.cpp
benchmarks/gmm/: Implementation_Eigen.cpp  Implementation_cuMat.cu  benchmark.h  main.cpp
benchmarks/linear_combination/: Implementation_Eigen.cpp  Implementation_cuBlas.cu  main.cpp  (+1 more)
cuMat/: CMakeLists.txt
cuMat/src/: Allocator.h  BinaryOps.h  CholeskyDecomposition.h  ConjugateGradient.h  Constants.h  Context.h  CublasApi.h  CudaUtils.h  CusolverApi.h  CwiseOp.h  DecompositionBase.h  DenseLinAlgOps.h  DevicePointer.h  EigenInteropHelpers.h  Errors.h  ForwardDeclarations.h  IO.h  IterativeSolverBase.h  Iterator.h  LUDecomposition.h  Logging.h  Macros.h  Matrix.h  MatrixBase.h  MatrixBlock.h  MatrixBlockPluginLvalue.inl  NullaryOps.h  NumTraits.h  ProductOp.h  Profiling.h  ReductionAlgorithmSelection.h  ReductionOps.h  SimpleRandom.h  SolverBase.h  SparseEvaluation.h  SparseExpressionOp.h  SparseMatrix.h  SparseMatrixBase.h  SparseProductEvaluation.h  TransposeOp.h  (+1 more)
demos/: BuddhabrotComplex.cu  BuddhabrotSimple.cu  Test.cu  Transposing.cu
docs/: CMakeLists.txt
tests/: Barrier.h  BenchmarkDenseConjugateGradient.cu  TestBinaryOps.cuh  TestBinaryOps1.cu  TestBinaryOps2.cu  TestBinaryOps3.cu  TestBlockedConjugateGradient.cu  TestCasting.cu  TestCholeskyDecomposition.cu  TestComplexOps.cu  TestCompoundAssignment.cu  TestConjugateGradient.cu  TestContext.cu  TestDevicePointer.cu  TestDiagonal.cu  TestEigenInterop.cu  TestIterator.cu  TestLUDecomposition.cu  TestLinAlgOps.cuh  TestLinAlgOps2.cu  TestLinAlgOps3.cu  TestLinAlgOps4.cu  TestMatrix.cu  TestMatrixBlock.cu  TestMatrixMultOp.cu  TestNoCUDA.cpp  TestNoCUDA.cu  TestNullaryOps.cu  TestRandom.cu  TestReductionOps1a.cu  TestReductionOps1b.cu  TestReductionOps2.cu  TestReductionOps3.cu  TestReductionOps4.cu  TestReductionOps5.cu  TestSparseMatrix.cu  TestSparseMultOp.cu  TestSwapAxisOp.cu  TestTranspose.cu  TestUnaryOps.cuh  (+4 more)
(+10 files in other folders)
